# crypto-aggregator

./: pyproject.toml
aggregator/: aggregator.py  crypto_api.py
aggregator/coingecko/: coingecko.py
