[tool.poetry]
name = "crypto-aggregator"
version = "0.1.0"
description = "Aggregator of crypto price aggregators like coingecko, coinmarketcap, etc"
authors = ["deepsp94 <anantsp94@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "crypto_aggregator"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
